<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Questo!</string>
    <string name="settingsfile">settings</string>
    <string name="quests">Quests</string>
    <string name="profile">Profile</string>
    <string name="tournaments">Tournaments</string>
    <string name="tournament_requests">Tournament Requests</string>
    <string name="companions">Companions</string>
    <string name="trophyroom">Trophy Room</string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_pleaselogin">Please log in:</string>
    <string name="login_signuplabel">If you have not signed up yet:</string>
    <string name="login_signupbutton">Signup to Questo!</string>
    <string name="homeicon_quests">Quests</string>
    <string name="homeicon_tournaments">Tournaments</string>
    <string name="homeicon_profile">Profile</string>
    <string name="homeicon_companions">Companions</string>
    <string name="homeicon_trophies">Trophy Room</string>
    <string name="homeicon_settings">Settings</string>
    <string name="error_login_email_notfound">Sorry, we could not find the email address you provided. Have you signed up already?</string>
    <string name="error_login_password_wrong">The password you provided is wrong.</string>
    <string name="tournament_request">Tournament Requests</string>
    <string name="place_achieved_trophies">You have achieved these Trophies here:</string>
    <string name="select_places">Select Places</string>
    <string name="add_place">Add Place</string>
    <string name="error_add_place_no_name">The place needs a name!</string>
    <string name="add_question_select_place">Select a place</string>
    <string name="error_question_place_count">Please select exactly one place</string>
</resources>
